# uci

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.sh  description.md  update.sh
cmake/: Paths.cmake
cmake/fakedTests/: cxx03_test.cc
include/uci/: Listener.h  Parser.h  definitions.h  events.h
include/uci/forwards/: Listener.h  Parser.h  uci.h
uci_code/: CMakeLists.txt
uci_code/benchmarks/: CMakeLists.txt  wordFromString.cpp
uci_code/include/uci/: Listener.h  Parser.h  Response.h  events.h
uci_code/src/: CMakeLists.txt  Listener.cpp  Parser.cpp  Response.cpp  main.cpp
uci_code/tests/: CMakeLists.txt  tests-listener.cpp  tests-parser.cpp
